fix: copyright appearing over menu when open, hopefully overflow issues as well

--- a/src/app.scss
+++ b/src/app.scss
@@ -120,7 +120,7 @@ body {
   position: absolute;
   left: 50%;
   bottom: 4dvh;
-  z-index: 400;
+  z-index: 20;
   transform: translate(-50%, 50%);
   font-size: clamp($min-font, $desired-font, $max-font);
 }
